--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tailwind clock</title>
 
-  <!-- <link rel="stylesheet" href="/src/style.css"> -->
+  <link rel="stylesheet" href="/src/style.css">
 </head>
 <body id="clockbody">
  
@@ -53,8 +53,8 @@
     <!-- clock components end-->
   </div>
 
-  <script src="/dist/bundle.js"></script>
-  <!-- <script src="/src/script.js"></script> -->
+  <!-- <script src="/dist/bundle.js"></script> -->
+  <script src="/src/script.js"></script>
 </body>
 
 </html>
